--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">BookReview</string>
     <string name="book_title">Book Title</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_book">Search Book</string>
+    <string name="recently_reviewed_book">Recently Reviewed Book</string>
+    <string name="maximum_reviewed_book">Maximum Reviewed Book</string>
 </resources>
