--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="review_comments">Review Comments</string>
     <string name="buy_this_book">Buy this Book</string>
     <string name="instruction">You can select star once only, not able to update</string>
+    <string name="comment">comment</string>
+    <string name="rating">rating</string>
 </resources>
